2014-11-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (init-d3charts): Correct max_low
	assignment.

	* src/html/classic/js/gsa_bar_chart.js (severity_bar_style): Adjust
	to corrected max_low and blend colors for bars that represent more
	than one severity level.

2014-11-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (format_file_name): Add string placeholder support for
	current, creation and modification time. Make modification date
	fallback work as described on the help page.

	* src/gsad.c (init_validator): Add %c, %m and %t as valid placeholders
	in details_fname, list_fname and report_fname.

	* src/html/classic/help.xsl (my_settings.html): Add descriptions of
	new placeholders.

2014-11-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (): Add #define _GNU_SOURCE and #include <time.h>.
	(format_file_name): Add credentials and resource_entity parameters.
	Add string placeholder support for current user name, creation and
	modification date. Rename file_date to now_date and free it before
	returning.
	(export_resource, export_many): Add new parameters to format_file_name
	call.
	(get_report): Close server connection after getting the file name
	setting in XML case. Add new parameters to format_file_name call.

	* src/gsad.c (init_validator): Add %C, %M and %u as valid placeholders
	in details_fname, list_fname and report_fname.

	* src/html/classic/help.xsl (my_settings.html): Add descriptions of
	new placeholders.

2014-11-12  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Free esxi_credentials_element
	after command has been generated.

2014-11-12  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/gsad.xsl (html-gsa-logo): Set height and width of
	logo img as some versions of Firefox do not always adjust the size
	correctly.

2014-11-12  Timo Pollmeier <timo.pollmeier@greenbone.net>
